# MachiUi

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.MD  pn.bat  pn.sh
.gemini/: GEMINI.md
Assets/: main.js  package.json
Assets/TestUI/: package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.ts
Assets/TestUI/src/: main.tsx
Assets/Ui/: test.js
Assets/platform/: machiUI-reconciler.js
Javascript/renderer/: machi-ui.js
Javascript/src/: App.tsx
Source/: CMakeLists.txt  MachiUi.h
Source/Common/: macro.h  typedef.h
Source/Core/: ComponentRegistry.h  DefaultFileLoader.cpp  DefaultFileLoader.h  DefaultLogger.cpp  DefaultLogger.h  DefaultTimer.cpp  DefaultTimer.h  DependancyInjector.h  EarlyLogger.cpp  EarlyLogger.h  Element.cpp  Element.h  ElementFactory.cpp  ElementFactory.h  IComponent.h  IFileLoader.h  IFormatter.h  IInput.h  ILogger.h  IService.cpp  IService.h  IServiceFactory.h  ITimer.h  IWindow.h  IWindowHost.h  Log.h  LogManager.cpp  LogManager.h  README.MD  SceneGraph.cpp  SceneGraph.h  SceneManager.cpp  SceneManager.h  ServiceInitializer.cpp  ServiceInitializer.h  ServiceProvider.h  ServiceRegistry.h  TaskScheduler.cpp  TaskScheduler.h  Types.h  (+10 more)
Source/DependancyManagement/: DependancyManager.cpp  DependancyManager.h  IDIFactory.h
Source/Elements/: Button.h  Div.cpp  Div.h  Img.h  Span.h  Text.h
Source/Javascript/: package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.ts
Source/Javascript/Native/: native.d.ts
Source/Javascript/Reconciler/: HostConfig.ts
Source/MinimalPlatform/: UniversalWindow.h  Win32Window.cpp  Win32Window.h  WindowManager.cpp  WindowManager.h
Source/MinimalPlatform/OSX/: OSXWindow.cpp  OSXWindow.h  OSXWindowHost.cpp  OSXWindowHost.h  impl.mm
Source/MinimalPlatform/Win/: Win32Window.cpp  Win32Window.h  Win32WindowHost.cpp  Win32WindowHost.h  WindowManager.cpp  WindowManager.h  impl.cpp  osdeps.h
Source/Renderer/: IRenderer.h  RenderCommand.h  RenderQueue.h
Source/Renderer/Backend/DX12/: backend.cpp
Source/Renderer/Backend/Metal/: backend.cpp
Source/Scripting/: ClassRegistry.cpp  ClassRegistry.h  NativeBinder.cpp  NativeBinder.h  QuickJsBackend.cpp  ScriptManager.cpp  ScriptManager.h
Test/: CMakeLists.txt  ScriptManagerTest.cpp
Test/UnitTest/: CMakeLists.txt
Test/UnitTest/Core/: DefaultTimerTest.cpp  ElementTest.cpp  ViewManagerTest.cpp
Test/UnitTest/Core/Mocks/: MockIWindow.h  MockServiceProvider.h  MockUiEngine.h  MockWindowHost.h
Test/UnitTest/Renderer/DX12/: BackendTest.cpp
Test/UnitTest/Scripting/: ScriptManagerTest.cpp
cmakes/: helper.cmake  library.cmake  test.cmake
examples/: main.cpp  main_windowmanager.cpp
